--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,6 +31,7 @@
     "@typescript-eslint/lines-between-class-members": "off",
     "arrow-body-style": ["error", "always"],
     "no-unused-vars": "off",
-    "@typescript-eslint/no-unused-vars": "off"
+    "@typescript-eslint/no-unused-vars": "off",
+    "object-curly-newline": "off"
   }
 }
