--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "automated Juicebox payout ditributor API",
   "license": "MIT",
   "scripts": {
+    "start": "node dist/api/index.js",
+    "build": "tsc",
     "dev": "nodemon src/api/index.ts"
   },
   "dependencies": {
     "@ethersproject/providers": "^5.7.2",
     "@jigglyjams/juice-sdk-v3": "^2.1.0-alpha",
     "axios": "^1.1.3",
+    "common-tags": "^1.8.2",
     "defender-relay-client": "^1.34.0",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
@@ -20,6 +23,7 @@
     "winston": "^3.8.2"
   },
   "devDependencies": {
+    "@types/common-tags": "^1.8.1",
     "@types/express": "^4.17.14",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@typescript-eslint/parser": "^5.41.0",
